@@ -24,7 +24,7 @@ import static org.mockito.Mockito.when;
 
 import com.google.common.collect.ImmutableMap;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.openqa.selenium.remote.DriverCommand;
 import org.openqa.selenium.remote.ExecuteMethod;
 import org.openqa.selenium.remote.RemoteLogs;
@@ -33,15 +33,15 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Level;
 
-public class PerformanceLoggingMockTest {
+class PerformanceLoggingMockTest {
 
   @Test
-  public void testMergesRemoteLogs() {
+  void testMergesRemoteLogs() {
     final ExecuteMethod executeMethod = mock(ExecuteMethod.class);
 
     when(executeMethod.execute(
         DriverCommand.GET_LOG, ImmutableMap.of(RemoteLogs.TYPE_KEY, LogType.PROFILER)))
-        .thenReturn(Arrays.asList(ImmutableMap.of(
+        .thenReturn(List.of(ImmutableMap.of(
           "level", Level.INFO.getName(),
           "timestamp", 1L,
           "message", "second")));
